add animation effect

--- a/WATCHD.tn/SingleSeriePage.html
+++ b/WATCHD.tn/SingleSeriePage.html
@@ -99,8 +99,9 @@
                                 <p>2 hours ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/vpm/vpm1.jpg" class="episode-img"/>
-                        
+                        <figure class="episode-figure">
+                                <img src="temp/vpm/vpm1.jpg" class="episode-img"/>
+                        </figure>
                     </div>
 
                     <div class="col episode"> <!-- episode item 2-->
@@ -111,7 +112,9 @@
                                 <p>7 days ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/vpm/vpm2.jpg" class="episode-img"/>
+                        <figure class="episode-figure">
+                                <img src="temp/vpm/vpm2.jpg" class="episode-img"/>
+                        </figure>
                     </div>
 
                     <div class="col episode"> <!-- episode item 3-->
@@ -122,7 +125,9 @@
                                 <p>14 days ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/vpm/vpm3.jpg" class="episode-img"/>
+                        <figure class="episode-figure">
+                                <img src="temp/vpm/vpm3.jpg" class="episode-img"/>
+                        </figure>
                     </div>
                 </div>
             </div>            
@@ -149,7 +154,9 @@
                                 </p>
                             </div>
                         </div> </a>
-                            <img src="temp/posters/6.jpg" class="poster-img"/>
+                        <figure class="poster-figure">
+                                <img src="temp/posters/6.jpg" class="poster-img"/>
+                        </figure>   
                     </div> 
                 </div>
                 <!-- repeat items-->
@@ -178,7 +185,9 @@
                                 </p>
                             </div>
                         </div> </a>
-                            <img src="temp/posters/23.jpg" class="poster-img"/>
+                        <figure class="poster-figure">
+                                <img src="temp/posters/23.jpg" class="poster-img"/>
+                        </figure>   
                     </div> 
                 <!-- repeat items-->
                 <script>multiplyNode(document.querySelector('.example2'), 5, true);</script>
