--- a/WATCHD.tn/index.html
+++ b/WATCHD.tn/index.html
@@ -146,7 +146,9 @@
                                 <p>2 hours ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/slide_img/slide2.jpg" class="episode-img"/>
+                        <figure class="episode-figure">
+                            <img src="temp/slide_img/slide2.jpg" class="episode-img"/>
+                        </figure>
                     </div>
 
                     <div class="col episode"> <!-- episode item 2-->
@@ -157,7 +159,9 @@
                                 <p>2 hours ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/slide_img/slide3.jpg" class="episode-img"/>
+                        <figure class="episode-figure">
+                                <img src="temp/slide_img/slide3.jpg" class="episode-img"/>
+                        </figure>
                     </div>
 
                     <div class="col episode"> <!-- episode item 3-->
@@ -168,7 +172,9 @@
                                 <p>2 hours ago</p>
                             </div>
                         </div></a>
-                        <img src="temp/slide_img/slide5.jpg" class="episode-img"/>
+                        <figure class="episode-figure">
+                                <img src="temp/slide_img/slide5.jpg" class="episode-img"/>
+                        </figure>
                     </div>
                 </div>
             </div>            
@@ -201,7 +207,9 @@
                                 </p>
                             </div>
                         </div> </a>
-                            <img src="temp/posters/1.jpg" class="poster-img"/>
+                        <figure class="poster-figure">
+                                <img src="temp/posters/1.jpg" class="poster-img"/>
+                        </figure>   
                     </div> 
                 <!-- repeat items-->
                 <script>multiplyNode(document.querySelector('.example1'), 10, true);</script>
@@ -236,7 +244,9 @@
                                 </p>
                             </div>
                         </div> </a>
-                            <img src="temp/posters/9.png" class="poster-img"/>
+                        <figure class="poster-figure">
+                                <img src="temp/posters/9.png" class="poster-img"/>
+                        </figure>   
                     </div> 
                 <!-- repeat items-->
                 <script>multiplyNode(document.querySelector('.example2'), 10, true);</script>
