episode page done

--- a/WATCHD.tn/index.html
+++ b/WATCHD.tn/index.html
@@ -139,7 +139,7 @@
                 </div>
                 <div class="row">
                     <div class="col episode"> <!-- episode item 1-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>Vikings S05E13</h5>
@@ -152,7 +152,7 @@
                     </div>
 
                     <div class="col episode"> <!-- episode item 2-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>Attack on Titan S03E12</h5>
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="col episode"> <!-- episode item 3-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>Black Clover S01E67</h5>
@@ -195,7 +195,7 @@
                             <div class="poster-links">
                                 <a href="#" class="btn-poster btn-series"><i class="icon-television"></i> Series</a><a class="btn-poster btn-completed">Completed</a>
                             </div>
-                            <a href="#"><div class="poster-content">
+                            <a href="SeasonPage.html"><div class="poster-content">
                             <div class="poster-info">
                                 <h5>Game of Thrones S08</h5>
                                 <p>
