--- a/WATCHD.tn/SingleSeriePage.html
+++ b/WATCHD.tn/SingleSeriePage.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="row">
                     <div class="col episode"> <!-- episode item 1-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>The Vampire Diaries S08E16</h5>
@@ -105,7 +105,7 @@
                     </div>
 
                     <div class="col episode"> <!-- episode item 2-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>The Vampire Diaries S08E15</h5>
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="col episode"> <!-- episode item 3-->
-                        <a href="#"><div class="episode-content">
+                        <a href="Episode.html"><div class="episode-content">
                             <h2><i class="icon-play"></i></h2>
                             <div class="episode-info">
                                 <h5>The Vampire Diaries S08E14</h5>
@@ -142,7 +142,7 @@
                             <div class="poster-links">
                                 <a href="#" class="btn-poster btn-series"><i class="icon-television"></i> Series</a><a class="btn-poster btn-completed">Completed</a>
                             </div>
-                            <a href="#"><div class="poster-content">
+                            <a href="SeasonPage.html"><div class="poster-content">
                             <div class="poster-info">
                                 <h5>The Vampire Diaries S07</h5>
                                 <p>
